# lgb-trsc

./: .gitignore  .lefthook.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/: .copilot-instructions.md
.github/ISSUE_TEMPLATE/: performance.md
.github/workflows/: deploy.yml  quality-check.yml
backend/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.sh
backend/api/: cache.py  config.py  db.py  main.py
backend/api/data/: datasets.json  hydrovu_parameters_units.json  ijinus_parameters_units.json
backend/api/models/: auth.py  measures.py
backend/api/services/: db.py  measures.py  s3.py
backend/api/utils/: file_nodes.py  file_size.py  mimetype.py
backend/api/views/: measures.py
backend/app/: config.py
backend/app/models/: user.py
data/: Makefile
frontend/: .eslintrc-auto-import.json  .eslintrc.cjs  Dockerfile  Makefile  README.md  i18n-specification.md  npm-shrinkwrap.json  package-lock.json  package.json  postcss.config.mjs  quasar.config.js  tsconfig.json
frontend/public/: CHL_monthly_mean_Mean.tif  CHL_monthly_mean_Mean.tif.aux.xml  CHL_monthly_mean_Mean_djibouti.tif  CHL_monthly_mean_Mean_djibouti.tif.aux.xml  bv.md  conduite_ec.md  conduite_principale_ec.md  debit_vhv.md  meteo.md  rejets_ec.md  rejets_eu.md  river.md  sensors-a.md  sensors-b.md  sensors-c.md  sensors-d.md  style.json
frontend/scripts/: convert.mjs
frontend/src/: auto-imports.d.ts  dateFormatter.ts  echart.js  echart_site.js  models.ts
(+173 files in other folders)
